---
source: crates/glyph-frontend/tests/mir_fixtures.rs
assertion_line: 436
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [],
}
